fix(*): change menu z-index

--- a/src/widgets/GameLyaout/ui/GameMenu/ui/GameMenu/GameMenu.module.scss
+++ b/src/widgets/GameLyaout/ui/GameMenu/ui/GameMenu/GameMenu.module.scss
@@ -3,6 +3,7 @@
     left: 50%;
     transform: translateX(-50%);
     bottom: 20px;
+    z-index: 1;
 }
 
 .items {
